# Cambrai

./: .gitignore  CMakeLists.txt  Cambrai.manifest  LICENSE.txt  README.md  icon.icns  icon.rc  run_cmake.sh
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  release.yml
installer/linux/: build_deb.sh
installer/macos/: build_pkg.sh
installer/windows/: cambrai.iss
modules/: json  raylib
src/: AIController.cpp  AIController.h  Audio.cpp  Config.cpp  Config.h  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Random.h  Renderer.cpp  Renderer.h  Shell.cpp  Shell.h  Tank.cpp  Tank.h  main.cpp
src/Obstacles/: AllObstacles.h  AutoTurret.h  BreakableWall.h  Electromagnet.h  Fan.h  Flag.h  HealthPack.h  Mine.h  Obstacle.cpp  Obstacle.h  Pit.h  Portal.h  Powerup.h  ReflectiveWall.h  RicochetWall.h  SolidWall.h
